modify schedule from AI to Processing

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -68,7 +68,7 @@
                            <td rowspan="2"><a id="cpp">C/C++</a></td>
 									<td rowspan="2">真人RPG</td>
 									<td rowspan="2"><a id='rpg'>RPG Maker</a></td>
-									<td rowspan="2"><a id='ai'>Adobe Illustrator</a></td>
+									<td rowspan="2"><a id='processing'>Processing</a></td>
                            <td rowspan="2">神秘晚會<br>(至21:30)</td>
 								</tr>
                         <tr>
