--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -47,9 +47,9 @@
 								<tr>
 									<td>0900~12:00</td>
 									<td>大地遊戲</td>
-									<td><a id='html'>HTML+CSS</a></td>
+									<td><a id='html'>Web Develop</a></td>
 									<td><a id='aviutl'>Aviutl</a></td>
-									<td><a id='js'>JavaScript</a></td>
+									<td><a id='cpp'>C/C++</a></td>
 									<td><a id='python'>Python 圖像處裡</a></td>
 									<td>成果發表</td>
 								</tr>
@@ -65,7 +65,7 @@
 								<tr>
 									<td>14:00~15:00</td>
 									<td><a id="BBS">BBS</a></td>
-                           <td rowspan="2"><a id="cpp">C/C++</a></td>
+                           <td rowspan="2">企業參訪</td>
 									<td rowspan="2">真人RPG</td>
 									<td rowspan="2"><a id='rpg'>RPG Maker</a></td>
 									<td rowspan="2"><a id='processing'>Processing</a></td>
