--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,1 +1,3 @@
-<h1><small><%= error.status %></small> <%= message %></h1>
+<h1><%= message %></h1>
+<h2><%= error.status %></h2>
+<pre><%= error.stack %></pre>
