--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -89,7 +89,7 @@
 				<!-- Three -->
 				<section id="three">
 					<div class="inner">
-						<span href="" class="button big" id="reg_button">5/27 開放報名</span>
+						<span href="" class="button big" id="reg_button">立刻報名！</span>
 						<section id="reg_form" style="display: none;">
 							<form method="post" action="#">
 								<div class="field half first">
