--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,7 +3,7 @@
    <a href="/" class="logo"><strong>成楓望建了美景</strong><span> 建成楓景聯合電資暑訓 </span></a>
    <nav>
       <a href="https://www.facebook.com/2017iczccamp"><span class="icon alt fa-facebook-official"></span></a>
-      <span class="logo"><span href="" class="button">5/27 開放報名</span></span>
+      <span class="logo"><a href="/guide#reg_form" class="button">立刻報名！</a></span>
       <a href="#menu">Menu</a>
    </nav>
 </header>
@@ -21,6 +21,6 @@
    </li></ul>
    <ul class="actions vertical">
       <li></li>
-      <li><a href="#" class="button fit">5/27 開放報名</a></li>
+      <li><a href="/guide#reg_form" class="button fit">立刻報名！</a></li>
    </ul>
 </div><a class="close" href="#menu">Close</a></nav>
