--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -59,7 +59,7 @@
 								報名成功後我們將於七月初公佈錄取名單，請留意 E-mail 信箱、粉專以及網站公告！</p>
 								<p>報名流程：</p>
 								<ol>
-									<li>列印家長同意書，簽名後拍照/掃描</li>
+									<li>列印<a href="/assets/parental_consent.docx">家長同意書</a>，簽名後拍照/掃描</li>
 									<li>線上填寫報名表單，上傳檔案</li>
 									<li>等待 6/23 公佈名單、寄發錄取通知</li>
 									<li>依照公告指示完成繳費</li>
@@ -128,7 +128,7 @@
 									<input name="emergency_contact" id="emergency_contact" type="text" required>
 								</div>
 								<div class="field">
-									<label for="parental_consent">繳交家長同意書（請拍照上傳）</label>
+									<label for="parental_consent">繳交<a href="/assets/parental_consent.docx">家長同意書</a>（請拍照上傳）</label>
 									<input name="parental_consent" type="file" required>
 								</div>
 								<div class="field">
