--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1947,6 +1947,7 @@ input[type="email"],
 input[type="tel"],
 input[type="search"],
 input[type="url"],
+input[type="date"],
 select,
 textarea {
 	-moz-appearance: none;
@@ -1970,6 +1971,7 @@ input[type="email"]:invalid,
 input[type="tel"]:invalid,
 input[type="search"]:invalid,
 input[type="url"]:invalid,
+input[type="date"]:invalid,
 select:invalid,
 textarea:invalid {
 	box-shadow: none;
@@ -1981,6 +1983,7 @@ input[type="email"]:focus,
 input[type="tel"]:focus,
 input[type="search"]:focus,
 input[type="url"]:focus,
+input[type="date"]:focus,
 select:focus,
 textarea:focus {
 	border-color: #9bf1ff;
@@ -2026,6 +2029,7 @@ input[type="email"],
 input[type="tel"],
 input[type="search"],
 input[type="url"],
+input[type="date"],
 select {
 	height: 2.75em;
 }
@@ -2528,7 +2532,7 @@ table.alt tfoot {
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
-button:not(.swal2-styled):not(.fancybox-button),
+button:not(.swal2-styled):not(.fancybox-button):not(.ws-popover-opener):not(.ws-popover),
 .button {
 	-moz-appearance: none;
 	-webkit-appearance: none;
