--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -1,112 +1,117 @@
 <!DOCTYPE HTML>
 <!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+   Forty by HTML5 UP
+   html5up.net | @ajlkn
+   Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<%- include('head'); %>
-	<body>
+   <%- include('head'); %>
+   <body>
 
-		<!-- Wrapper -->
-		<div id="wrapper">
+      <!-- Wrapper -->
+      <div id="wrapper">
 
-			<%- include('header'); %>
+         <%- include('header'); %>
 
-			<!-- Main -->
-			<div id="main" class="alt">
-				<div class="inner">
-					<header class="major">
-						<h1>課程資訊</h1>
-					</header>
-					<div class="table-wrapper">
-						<table class="alt">
-							<thead>
-								<tr>
-									<th>時間</th>
-									<th>7/25(二)</th>
-									<th>7/26(三)</th>
-									<th>7/27(四)</th>
-									<th>7/28(五)</th>
-									<th>7/29(六)</th>
-									<th>7/30(日)</th>
-									<th>7/31(一)</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>08:00~09:00</td>
-									<td>破冰時間</td>
-									<td>晨間早操</td>
-									<td>晨間早操</td>
-									<td>晨間早操</td>
+         <!-- Main -->
+         <div id="main" class="alt">
+            <div class="inner">
+               <header class="major">
+                  <h1>課程資訊</h1>
+               </header>
+               <div class="table-wrapper">
+                  <table class="alt">
+                     <thead>
+                        <tr>
+                           <th>時間</th>
+                           <th>7/25(二)</th>
+                           <th>7/26(三)</th>
+                           <th>7/27(四)</th>
+                           <th>7/28(五)</th>
+                           <th>7/29(六)</th>
+                           <th>7/30(日)</th>
+                           <th>7/31(一)</th>
+                        </tr>
+                     </thead>
+                     <tbody>
+                        <tr>
+                           <td>08:00~09:00</td>
+                           <td>破冰時間</td>
+                           <td>晨間早操</td>
+                           <td>晨間早操</td>
+                           <td>晨間早操</td>
                            <td rowspan="5">神秘活動<br>(至21:00)</td>
-									<td>晨間早操</td>
-									<td>晨間早操</td>
-								</tr>
-								<tr>
-									<td>0900~12:00</td>
-									<td>大地遊戲</td>
-									<td><a id='html'>Web Develop</a></td>
-									<td><a id='aviutl'>Aviutl</a></td>
-									<td><a id='cpp'>C/C++</a></td>
-									<td><a id='python'>Python 圖像處裡</a></td>
-									<td>成果發表</td>
-								</tr>
-								<tr>
-									<td>1200~14:00</td>
-									<td>午餐時間</td>
-									<td>午餐時間</td>
-									<td>午餐時間</td>
-									<td>午餐時間</td>
-									<td>午餐時間</td>
-									<td>午餐時間</td>
-								</tr>
-								<tr>
-									<td>14:00~15:00</td>
-									<td><a id="BBS">BBS</a></td>
+                           <td>晨間早操</td>
+                           <td>晨間早操</td>
+                        </tr>
+                        <tr>
+                           <td>0900~12:00</td>
+                           <td>大地遊戲</td>
+                           <td><a id='html'>Web Develop</a></td>
+                           <td><a id='aviutl'>Aviutl</a></td>
+                           <td><a id='cpp'>C/C++</a></td>
+                           <td><a id='python'>Python 圖像處裡</a></td>
+                           <td>成果發表</td>
+                        </tr>
+                        <tr>
+                           <td>1200~14:00</td>
+                           <td>午餐時間</td>
+                           <td>午餐時間</td>
+                           <td>午餐時間</td>
+                           <td>午餐時間</td>
+                           <td>午餐時間</td>
+                           <td>午餐時間</td>
+                        </tr>
+                        <tr>
+                           <td>14:00~15:00</td>
+                           <td><a id="BBS">BBS</a></td>
                            <td rowspan="2">企業參訪</td>
-									<td rowspan="2">真人RPG</td>
-									<td rowspan="2"><a id='rpg'>RPG Maker</a></td>
-									<td rowspan="2"><a id='processing'>Processing</a></td>
+                           <td rowspan="2">真人RPG</td>
+                           <td rowspan="2"><a id='rpg'>RPG Maker</a></td>
+                           <td rowspan="2"><a id='processing'>Processing</a></td>
                            <td rowspan="2">神秘晚會<br>(至21:30)</td>
-								</tr>
+                        </tr>
                         <tr>
                            <td>15:00~17:00</td>
                            <td><a id="ps">Adobe PhotoShop</a></td>
                         </tr>
-							</tbody>
-						</table>
-					</div>
-				</div>
-			</div>
+                     </tbody>
+                  </table>
+               </div>
+            </div>
+         </div>
 
-			<%- include('footer'); %>
-		</div>
+         <%- include('footer'); %>
+      </div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-		<script src="assets/js/main.js"></script>
-		<script src="assets/js/sweetalert2.min.js"></script>
-		<link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
-		<script>
-(function($){
-	<% Subject.forEach(function(val, index, arr){ %>
-			$("#<%= val.id %>").click(function(){
-				swal({
-					title: '<%= val.title %>',
-					text: '<%= val.text %>',
-					imageUrl: 'assets/images/<%= val.img %>'
-				});
-				$("#header").hide().show(0);
-			});
-		<% }); %>
+      <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.scrolly.min.js"></script>
+      <script src="assets/js/jquery.scrollex.min.js"></script>
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+      <script src="assets/js/main.js"></script>
+      <script src="assets/js/sweetalert2.min.js"></script>
+      <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
+      <script>
+      (function($){
+      <% Subject.forEach(function(val, index, arr){ %>
+         $("#<%= val.id %>").click(function(){
+            swal({
+               title: '<%= val.title %>',
+               text: '<%= val.text %>',
+               imageUrl: 'assets/images/<%= val.img %>'
+            });
+            $("#header").hide().show(0);
+         });
+      <% }); %>
 })(jQuery);
-		</script>
-	</body>
+      </script>
+      <style>
+         a{
+            cursor: pointer;
+         }
+      </style>
+   </body>
 </html>
