--- a/views/panel.ejs
+++ b/views/panel.ejs
@@ -5,6 +5,17 @@
       <meta charset="utf-8" />
       <link rel="shortcut icon" type="image/jpeg" href="assets/images/favicon.jpg"/>
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+      <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+      <style>
+         .agreement{
+            color: #337ab7;
+            text-decoration: none;
+            cursor:pointer;
+         }
+         .agreement:hover{
+            text-decoration: underline;
+         }
+      </style>
    </head>
    <body>
       <blockquote>
@@ -39,19 +50,35 @@
                   <td><%= val.gender %></td>
                   <td><%= val.parent_name %></td>
                   <td><%= val.phone_number %></td>
-                  <td><%= val.email %></td>
+                  <td><a target="_blank" href="mailto:<%= val.email %>"><%= val.email %></a></td>
                   <td><%= val.id_number %></td>
                   <td><%= val.birthday %></td>
                   <td><%= val.transport %></td>
                   <td><%= val.emergency_contact %></td>
-                  <td><%= val.parental_consent %></td>
+                  <td class='agreement'><%= val.parental_consent %></td>
                   <td><%= val.message %></td>
                </tr>
                <% }); %>
             </tbody>
          </table>
-         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-         <script src="assets/js/boostrap.min.js"></script>
+         <script src="assets/js/jquery.min.js"></script>
+         <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
+         <script src="assets/js/bootstrap.min.js"></script>
+         <script src="assets/js/sweetalert2.min.js"></script>
+         <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
+         <script>
+         (function($){
+            $(function(){
+               $(".agreement").click(function(){
+                  var userName = $(this).parent().children().first().html();
+                  var source = 'upload/'+$(this).html();
+                  swal({
+                     title: userName,
+                     imageUrl: source
+                  });
+               });
+            });
+         })(jQuery);
+         </script>
    </body>
 </html>
