fixed og problem

--- a/views/head.ejs
+++ b/views/head.ejs
@@ -9,7 +9,7 @@
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
     <meta property="og:title" content="《成楓望建了美景》2017 建成楓景聯合電資暑訓" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://四校電資.camp/" />
+    <meta property="og:url" content="https://xn--wbsw51bgv1arsi.camp/" />
     <meta property="og:image" content="https://xn--wbsw51bgv1arsi.camp/assets/images/og.png" />
     <meta property="og:description" content="由建國中學資訊社、成功高中電子計算機研習社、中山女高資訊研究社、景美女中電腦資訊社這幾個充滿熱忱的高中社團聯合舉辦。暑訓將以實作課程為主，加上企業參訪、有趣的活動，號召有興趣的國中在學/畢業生一同探索資訊的世界。透過我們的營隊，同學將能更進一步了解什麼是資訊科技，培養進一步的資訊能力。" />
 </head>
