--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -157,6 +157,8 @@
 		<script src="assets/js/skel.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+      <script src="assets/js/sweetalert2.min.js"></script>
+      <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
 		<link rel="stylesheet" href="assets/css/datepicker.css" />
 		<script src="assets/js/datepicker.js"></script>
 		<script src="assets/js/datepicker-CN.js"></script>
