--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -97,7 +97,7 @@
 								</div>
 								<div class="field half">
 									<label for="gender">學員性別</label>
-									<select name="gender" id="gender"><option value="男">男</option><option value="女">女</option></select>
+									<select name="gender" id="gender"><option style="color:black;" value="男">男</option><option style="color:black;" value="女">女</option></select>
 								</div>
 								<div class="field half first">
 									<label for="parent_name">家長姓名</label>
