--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -50,7 +50,7 @@
                            <td><a id='html'>Web Develop</a></td>
                            <td><a id='aviutl'>Aviutl</a></td>
                            <td><a id='cpp'>C/C++</a></td>
-                           <td><a id='python'>Python 圖像處裡</a></td>
+                           <td><a id='python'>Python 圖像處理</a></td>
                            <td>成果發表</td>
                         </tr>
                         <tr>
