add js validation

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -129,7 +129,7 @@
 								</div>
 								<div class="field">
 									<label for="parental_consent">繳交<a target="_blank" href="/assets/parental_consent.docx">家長同意書</a>（請拍照上傳）</label>
-									<input name="parental_consent" type="file" accept="image/*" required>
+									<input name="parental_consent" id="parental_consent" type="file" accept="image/*" required>
 								</div>
 								<div class="field">
 									<label for="message">備註</label>
