--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -1,175 +1,189 @@
 <!DOCTYPE HTML>
 <!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+   Forty by HTML5 UP
+   html5up.net | @ajlkn
+   Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<%- include('head'); %>
-	<body>
+   <%- include('head'); %>
+   <body>
 
-		<!-- Wrapper -->
-		<div id="wrapper">
-			<%- include('header'); %>
-			<!-- Main -->
-			<div id="main">
+      <!-- Wrapper -->
+      <div id="wrapper">
+         <%- include('header'); %>
+         <!-- Main -->
+         <div id="main">
 
-				<!-- One -->
-				<section id="one">
-					<div class="inner">
-						<header class="major">
-							<h2>營隊簡介</h2>
-						</header>
-						<p>由建國中學資訊社、成功高中電子計算機研習社、中山女高資訊研究社、景美女中電腦資訊社這幾個充滿熱忱的高中社團聯合舉辦。暑訓將以實作課程為主，加上企業參訪、有趣的活動，號召有興趣的國中在學/畢業生一同探索資訊的世界。透過我們的營隊，同學將能更進一步了解什麼是資訊科技，培養進一步的資訊能力。</p>
-					</div>
-				</section>
+            <!-- One -->
+            <section id="one">
+               <div class="inner">
+                  <header class="major">
+                     <h2>營隊簡介</h2>
+                  </header>
+                  <p>由建國中學資訊社、成功高中電子計算機研習社、中山女高資訊研究社、景美女中電腦資訊社這幾個充滿熱忱的高中社團聯合舉辦。暑訓將以實作課程為主，加上企業參訪、有趣的活動，號召有興趣的國中在學/畢業生一同探索資訊的世界。透過我們的營隊，同學將能更進一步了解什麼是資訊科技，培養進一步的資訊能力。</p>
+               </div>
+            </section>
 
-				<!-- Two -->
-				<section id="two_s" class="spotlights">
-					<section>
-						<div alt="" class="image" style="background-image: url(images/pic09.jpg); position: relative;"><h1>7/25<br>至 7/31</h1></div>
-						<div class="content">
-							<div class="inner">
-								<header class="major">
-									<h3>活動日程</h3>
-								</header>
-								<ul>
-									<li>報名時間：5/27（六）— &nbsp;6/22（四）</li>
-									<li>名單公佈：6/23（五）</li>
-									<li>正取繳費：6/24（六）— &nbsp;6/30（五）</li>
-									<li>備取通知：7/01（六）</li>
-									<li>備取繳費：7/02（日）— &nbsp;7/08（六）</li>
-									<li>營隊活動：7/25（二）— &nbsp;7/31（一）<br>
-										全程參與費用為 $2500 元，<br>
-										每日活動以 8:00 AM - 5:00 PM 為主，供應午餐，<br>
-										（活動日程表請參見<a href="/schedule">課程資訊</a>，保留異動空間）</li>
-								</ul>
-							</div>
-						</div>
-					</section>
-					<section>
-						<div alt="" class="image" style="background-image: url(images/pic10.jpg); position: relative;"><h1>錄取名單<br>6/23 公佈</h1></div>
-						<div class="content">
-							<div class="inner">
-								<a class="anchor" id="reg"></a>
-								<header class="major">
-									<h3>報名須知</h3>
-								</header>
-								<p>本營隊一律採用線上報名，請在報名時間開始後點選本頁下方按鈕，完整填寫報名表單。
-								報名成功後我們將於七月初公佈錄取名單，請留意 E-mail 信箱、粉專以及網站公告！</p>
-								<p>報名流程：</p>
-								<ol>
-									<li>列印<a href="/assets/parental_consent.docx">家長同意書</a>，簽名後拍照/掃描</li>
-									<li>線上填寫報名表單，上傳檔案</li>
-									<li>等待 6/23 公佈名單、寄發錄取通知</li>
-									<li>依照公告指示完成繳費</li>
-									<li>公佈已繳費名單，確認完成報名流程</li>
-								</ol>
-								<p></p>
-							</div>
-						</div>
-					</section>
-				</section>
+            <!-- Two -->
+            <section id="two_s" class="spotlights">
+               <section>
+                  <div alt="" class="image" style="background-image: url(images/pic09.jpg); position: relative;"><h1>7/25<br>至 7/31</h1></div>
+                  <div class="content">
+                     <div class="inner">
+                        <header class="major">
+                           <h3>活動日程</h3>
+                        </header>
+                        <ul>
+                           <li>報名時間：5/27（六）— &nbsp;6/22（四）</li>
+                           <li>名單公佈：6/23（五）</li>
+                           <li>正取繳費：6/24（六）— &nbsp;6/30（五）</li>
+                           <li>備取通知：7/01（六）</li>
+                           <li>備取繳費：7/02（日）— &nbsp;7/08（六）</li>
+                           <li>營隊活動：7/25（二）— &nbsp;7/31（一）<br>
+                              全程參與費用為 $2500 元，<br>
+                              每日活動以 8:00 AM - 5:00 PM 為主，供應午餐，<br>
+                              （活動日程表請參見<a href="/schedule">課程資訊</a>，保留異動空間）</li>
+                        </ul>
+                     </div>
+                  </div>
+               </section>
+               <section>
+                  <div alt="" class="image" style="background-image: url(images/pic10.jpg); position: relative;"><h1>錄取名單<br>6/23 公佈</h1></div>
+                  <div class="content">
+                     <div class="inner">
+                        <a class="anchor" id="reg"></a>
+                        <header class="major">
+                           <h3>報名須知</h3>
+                        </header>
+                        <p>本營隊一律採用線上報名，請在報名時間開始後點選本頁下方按鈕，完整填寫報名表單。
+                        報名成功後我們將於七月初公佈錄取名單，請留意 E-mail 信箱、粉專以及網站公告！</p>
+                        <p>報名流程：</p>
+                        <ol>
+                           <li>列印<a href="/assets/parental_consent.docx">家長同意書</a>，簽名後拍照/掃描</li>
+                           <li>線上填寫報名表單，上傳檔案</li>
+                           <li>等待 6/23 公佈名單、寄發錄取通知</li>
+                           <li>依照公告指示完成繳費</li>
+                           <li>公佈已繳費名單，確認完成報名流程</li>
+                        </ol>
+                        <p></p>
+                     </div>
+                  </div>
+               </section>
+            </section>
 
-				<!-- Two and half -->
-				<section class="two">
-					<div class="inner">
-						<header class="major">
-							<h2>有不清楚或好奇的地方嗎？<br style="display: none;">來粉專發問吧！</h2>
-						</header>
-						<p>關於我們的活動有什麼說明不清楚的地方嗎？快來粉專訊息提問吧！</p>
-						<div class="frames">
-							<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F2017iczccamp&tabs=timeline&width=340&height=360&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=171314869621110" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-						</div>
-					</div>
-				</section>
-				<div style="clear: both;"></div>
+            <!-- Two and half -->
+            <section class="two">
+               <div class="inner">
+                  <header class="major">
+                     <h2>有不清楚或好奇的地方嗎？<br style="display: none;">來粉專發問吧！</h2>
+                  </header>
+                  <p>關於我們的活動有什麼說明不清楚的地方嗎？快來粉專訊息提問吧！</p>
+                  <div class="frames">
+                     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F2017iczccamp&tabs=timeline&width=340&height=360&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId=171314869621110" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                  </div>
+               </div>
+            </section>
+            <div style="clear: both;"></div>
 
-				<!-- Three -->
-				<section id="three">
-					<div class="inner">
-						<span href="" class="button big" id="reg_button">立刻報名！</span>
-						<section id="reg_form" style="display: none;">
-							<form method="post" action="#">
-								<div class="field half first">
-									<label for="full_name">學員姓名</label>
-									<input name="full_name" id="full_name" type="text" required>
-								</div>
-								<div class="field half">
-									<label for="gender">學員性別</label>
-									<select name="gender" id="gender"><option style="color:black;" value="男">男</option><option style="color:black;" value="女">女</option></select>
-								</div>
-								<div class="field half first">
-									<label for="parent_name">家長姓名</label>
-									<input name="parent_name" id="parent_name" type="text" required>
-								</div>
-								<div class="field half">
-									<label for="phone_number">聯絡電話</label>
-									<input name="phone_number" id="phone_number" type="text" required>
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input name="email" id="email" type="email" required>
-								</div>
-								<div class="field half first">
-									<label for="id_number">身份證字號</label>
-									<input name="id_number" id="id_number" type="text" required>
-								</div>
-								<div class="field half">
-									<label for="birthday">生日（保險用）</label>
-									<input data-toggle="datepicker" name="birthday" id="birthday" type="text" required>
-								</div>
-								<div class="field half first">
-									<label for="transport">交通方式</label>
-									<input name="transport" id="transport" placeholder="自行前往/家長接送" type="text" required>
-								</div>
-								<div class="field half">
-									<label for="emergency_contact">緊急聯絡人/關係/電話</label>
-									<input name="emergency_contact" id="emergency_contact" type="text" required>
-								</div>
-								<div class="field">
-									<label for="parental_consent">繳交<a target="_blank" href="/assets/parental_consent.docx">家長同意書</a>（請拍照上傳）</label>
-									<input name="parental_consent" id="parental_consent" type="file" accept="image/*" required>
-								</div>
-								<div class="field">
-									<label for="message">備註</label>
-									<textarea name="message" id="message" rows="6"></textarea>
-								</div>
-								<ul class="actions">
-									<li><input class="special" value="送出" type="submit"></li>
-									<li><input value="清除重填" type="reset"></li>
-								</ul>
-							</form>
-						</section>
-					</div>
-				</section>
-				<div id="overlay">
-					<h1></h1>
-				</div>
-			</div>
-			<%- include('footer'); %>
-		</div>
+            <!-- Three -->
+            <section id="three">
+               <div class="inner">
+                  <span href="" class="button big" id="reg_button">立刻報名！</span>
+                  <section id="reg_form" style="display: none;">
+                     <form method="post" action="#">
+                        <div class="field half first">
+                           <label for="full_name">學員姓名</label>
+                           <input name="full_name" id="full_name" type="text" required>
+                        </div>
+                        <div class="field half">
+                           <div class="field half">
+                              <label for="gender">學員性別</label>
+                              <select name="gender" id="gender">
+                                 <option style="color:black;" value="男">男</option>
+                                 <option style="color:black;" value="女">女</option>
+                              </select>
+                           </div>
+                           <div class="field half">
+                              <label for="clothe_size" id="cloth_size">訓服尺寸</label>
+                           <select name="clothe_size" id="clothe_size">
+                              <option value="S" style="color:black;">S</option>
+                              <option value="M" style="color:black;">M</option>
+                              <option value="L" style="color:black;">L</option>
+                              <option value="XL" style="color:black;">XL</option>
+                           </select>
+                        </div>
+               </div>
+               <div class="field half first">
+                  <label for="parent_name">家長姓名</label>
+                  <input name="parent_name" id="parent_name" type="text" required>
+               </div>
+               <div class="field half">
+                  <label for="phone_number">聯絡電話</label>
+                  <input name="phone_number" id="phone_number" type="text" required>
+               </div>
+               <div class="field">
+                  <label for="email">Email</label>
+                  <input name="email" id="email" type="email" required>
+               </div>
+               <div class="field half first">
+                  <label for="id_number">身份證字號</label>
+                  <input name="id_number" id="id_number" type="text" required>
+               </div>
+               <div class="field half">
+                  <label for="birthday">生日（保險用）</label>
+                  <input data-toggle="datepicker" name="birthday" id="birthday" type="text" required>
+               </div>
+               <div class="field half first">
+                  <label for="transport">交通方式</label>
+                  <input name="transport" id="transport" placeholder="自行前往/家長接送" type="text" required>
+               </div>
+               <div class="field half">
+                  <label for="emergency_contact">緊急聯絡人/關係/電話</label>
+                  <input name="emergency_contact" id="emergency_contact" type="text" required>
+               </div>
+               <div class="field">
+                  <label for="parental_consent">繳交<a target="_blank" href="/assets/parental_consent.docx">家長同意書</a>（請拍照上傳）</label>
+                  <input name="parental_consent" id="parental_consent" type="file" accept="image/*" required>
+               </div>
+               <div class="field">
+                  <label for="message">備註</label>
+                  <textarea name="message" id="message" rows="6"></textarea>
+               </div>
+               <ul class="actions">
+                  <li><input class="special" value="送出" type="submit"></li>
+                  <li><input value="清除重填" type="reset"></li>
+               </ul>
+                     </form>
+                  </section>
+         </div>
+            </section>
+            <div id="overlay">
+               <h1></h1>
+            </div>
+      </div>
+      <%- include('footer'); %>
+      </div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+      <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.scrolly.min.js"></script>
+      <script src="assets/js/jquery.scrollex.min.js"></script>
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
       <script src="assets/js/sweetalert2.min.js"></script>
       <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
-		<link rel="stylesheet" href="assets/css/datepicker.css" />
-		<script src="assets/js/datepicker.js"></script>
-		<script src="assets/js/datepicker-CN.js"></script>
-		<script>
-		$('[data-toggle="datepicker"]').datepicker({
-			language: 'zh-CN',
-			'date': '2002/01/01',
-			'endDate': 'now',
-		});
-		</script>
-		<script src="assets/js/main.js"></script>
+      <link rel="stylesheet" href="assets/css/datepicker.css" />
+      <script src="assets/js/datepicker.js"></script>
+      <script src="assets/js/datepicker-CN.js"></script>
+      <script>
+$('[data-toggle="datepicker"]').datepicker({
+   language: 'zh-CN',
+   'date': '2002/01/01',
+   'endDate': 'now',
+});
+      </script>
+      <script src="assets/js/main.js"></script>
 
-	</body>
+   </body>
 </html>
