add group register

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -125,6 +125,10 @@
                   <label for="email">Email</label>
                   <input name="email" id="email" type="email" required>
                </div>
+               <div class="field">
+                  <label for="group">團報夥伴(若有團報，則每個人皆須輸入團報夥伴的名字)</label>
+                  <input name="group" id="group" type="text">
+               </div>
                <div class="field half first">
                   <label for="id_number">身份證字號</label>
                   <input name="id_number" id="id_number" type="text" required>
