--- a/views/panel.ejs
+++ b/views/panel.ejs
@@ -32,6 +32,7 @@
                <tr>
                   <th>學員姓名</th>
                   <th>性別</th>
+                  <th>尺寸</th>
                   <th>家長姓名</th>
                   <th>連絡電話</th>
                   <th>Email</th>
@@ -48,6 +49,7 @@
                <tr>
                   <td><%= val.full_name %></td>
                   <td><%= val.gender %></td>
+                  <td><%= val.clothe_size %></td>
                   <td><%= val.parent_name %></td>
                   <td><%= val.phone_number %></td>
                   <td><a target="_blank" href="mailto:<%= val.email %>"><%= val.email %></a></td>
