Add price tooltip

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -66,13 +66,13 @@
                 </ol>
                 <p>活動費用：</p>
                 <ul>
-                  <li>全程參與費用為原價 $2500 元</li>
+                  <li>全程參與費用為 $2500 元</li>
                   <li>
                     團體報名優惠
                     <ul>
                       <li>為了鼓勵更多同學來參與，我們提供了團體報名優惠</li>
-                      <li>優惠方式為：三位同學一同團報，每人折 100 元</li>
-                      <li>請於報名時填寫「團報名單」欄位告知我們</li>
+                      <li>優惠方式為：三位同學一同團報，每人折 <a title="折扣後 2400 元">100</a> 元</li>
+                      <li>請<strong>務必</strong>於報名時填寫「團報名單」欄位告知我們！</li>
                     </ul>
                   </li>
                   <li>匯款帳戶：025501223801</li>
