add group register in panel

--- a/views/panel.ejs
+++ b/views/panel.ejs
@@ -41,6 +41,7 @@
                   <th>交通方式</th>
                   <th>緊急聯絡</th>
                   <th>同意書</th>
+                  <th>團報</th>
                   <th>備註</th>
                </tr>
             </thead>
@@ -58,6 +59,7 @@
                   <td><%= val.transport %></td>
                   <td><%= val.emergency_contact %></td>
                   <td class='agreement'><%= val.parental_consent %></td>
+                  <td><%= val.group %></td>
                   <td><%= val.message %></td>
                </tr>
                <% }); %>
