add background image at index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,18 +33,18 @@
 							<p>暑訓者，營隊也？</p>
 						</header>
 					</article>
-					<article style="background-image: url(&quot;assets/images/pic02.jpg&quot;);">
+					<article style="background-image: url(&quot;assets/images/reg.jpg&quot;);">
 						<span class="image" style="display: none;">
-							<img src="assets/images/pic02.jpg" alt="">
+							<img src="assets/images/reg.jpg" alt="">
 						</span>
 						<header class="major">
 							<h3><a href="guide#reg" class="link">報名辦法</a></h3>
 							<p>加入我們吧！</p>
 						</header>
 					</article>
-					<article style="background-image: url(&quot;assets/images/pic03.jpg&quot;);">
+					<article style="background-image: url(&quot;assets/images/2016/11.jpg&quot;);">
 						<span class="image" style="display: none;">
-							<img src="assets/images/pic03.jpg" alt="">
+							<img src="assets/images/2016/11.jpg" alt="">
 						</span>
 						<header class="major">
 							<h3><a href="/schedule" class="link">課程資訊</a></h3>
@@ -69,9 +69,9 @@
 							<p>（敬請期待）</p>
 						</header>
 					</article>
-					<article style="background-image: url(&quot;assets/images/pic06.jpg&quot;);">
+					<article style="background-image: url(&quot;assets/images/2015/old1.jpg&quot;);">
 						<span class="image" style="display: none;">
-							<img src="assets/images/pic06.jpg" alt="">
+							<img src="assets/images/2015/old1.jpg" alt="">
 						</span>
 						<header class="major">
 							<h3><a href="/gallery" class="link">歷年照片</a></h3>
