--- a/views/head.ejs
+++ b/views/head.ejs
@@ -12,4 +12,5 @@
     <meta property="og:url" content="https://xn--wbsw51bgv1arsi.camp/" />
     <meta property="og:image" content="https://xn--wbsw51bgv1arsi.camp/assets/images/og.png" />
     <meta property="og:description" content="由建國中學資訊社、成功高中電子計算機研習社、中山女高資訊研究社、景美女中電腦資訊社這幾個充滿熱忱的高中社團聯合舉辦。暑訓將以實作課程為主，加上企業參訪、有趣的活動，號召有興趣的國中在學/畢業生一同探索資訊的世界。透過我們的營隊，同學將能更進一步了解什麼是資訊科技，培養進一步的資訊能力。" />
+    <meta property="fb:app_id" content="962143710555713" />
 </head>
