update parental consent description

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -156,7 +156,7 @@
                   <input name="emergency_contact" id="emergency_contact" type="text" required>
                 </div>
                 <div class="field">
-                  <label for="parental_consent">繳交<a target="_blank" href="/assets/parental_consent.docx">家長同意書</a>（請拍照上傳）</label>
+                  <label for="parental_consent">繳交<a target="_blank" href="/assets/parental_consent.docx">家長同意書</a>（請印出後拍照上傳）</label>
                   <input name="parental_consent" id="parental_consent" type="file" accept="image/*" required>
                 </div>
                 <div class="field">
