--- a/views/panel.ejs
+++ b/views/panel.ejs
@@ -60,7 +60,7 @@
                   <td><%= val.emergency_contact %></td>
                   <td class='agreement'><%= val.parental_consent %></td>
                   <td><%= val.group %></td>
-                  <td><%= val.message %></td>
+                  <td><pre style="background-color:transparent;border:0;padding:0px;max-height:100px;"><%= val.message %></pre></td>
                </tr>
                <% }); %>
             </tbody>
