--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4033,6 +4033,14 @@ a.anchor {
 	align-items: center;
 	justify-content: center;
 }
+#overlay.loading {
+   position: fixed;
+   top: 0;left: 0;
+   z-index: 711111111111111111111111111111111122;
+   background-color: rgba(0,0,0,0.6);
+   width: 100%;
+   height: 100%;
+}
 
 #overlay.show {
 	position: fixed;
