add more information

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -75,6 +75,7 @@
                       <li>請於報名時填寫「團報名單」欄位告知我們</li>
                     </ul>
                   </li>
+                  <li>匯款帳戶：025501223801</li>
                 </ul>
               </div>
             </div>
