--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -35,6 +35,16 @@
                      </thead>
                      <tbody>
                         <tr>
+                           <td>集合地點</td>
+                           <td style="font-size:90%;">捷運中正紀念堂站</td>
+                           <td style="font-size:85%;">捷運松江南京站</td>
+                           <td style="font-size:85%;">捷運松江南京站</td>
+                           <td style="font-size:85%;">捷運松江南京站</td>
+                           <td style="font-size:85%;">視情況於活動後公布</td>
+                           <td>捷運七張站</td>
+                           <td style="font-size:85%;">捷運松江南京站</td>
+                        </tr>
+                        <tr>
                            <td>08:00~09:00</td>
                            <td>破冰時間</td>
                            <td>晨間早操</td>
