--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -34,7 +34,11 @@
                   <h3>活動日程</h3>
                 </header>
                 <ul>
-                  <li>報名時間：5/27（六）— &nbsp;6/22（四）</li>
+                  <li>報名時間：<strike>5/27（六）— &nbsp;6/22（四）</strike>
+                    <ol>
+                      <li>改為 7/6（四）截止喔！</li>
+                    </ol>
+                  </li>
                   <li>名單公佈：6/23（五）</li>
                   <li>正取繳費：6/24（六）— &nbsp;6/30（五）</li>
                   <li>備取通知：7/01（六）</li>
