Add j. high school field in reg. form

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -129,12 +129,20 @@
                   </div>
                 </div>
                 <div class="field half first">
-                  <label for="parent_name">家長姓名</label>
-                  <input name="parent_name" id="parent_name" type="text" required>
+                  <label for="school">就讀國中</label>
+                  <input name="school" id="school" type="text" required>
                 </div>
                 <div class="field half">
                   <label for="phone_number">聯絡電話</label>
                   <input name="phone_number" id="phone_number" type="text" required>
+                </div>
+                <div class="field half first">
+                  <label for="parent_name">家長姓名</label>
+                  <input name="parent_name" id="parent_name" type="text" required>
+                </div>
+                <div class="field half">
+                  <label for="transport">交通方式</label>
+                  <input name="transport" id="transport" placeholder="自行前往/家長接送" type="text" required>
                 </div>
                 <div class="field">
                   <label for="email">Email</label>
@@ -152,11 +160,7 @@
                   <label for="birthday">生日（保險用）</label>
                   <input data-toggle="datepicker" name="birthday" id="birthday" type="text" required>
                 </div>
-                <div class="field half first">
-                  <label for="transport">交通方式</label>
-                  <input name="transport" id="transport" placeholder="自行前往/家長接送" type="text" required>
-                </div>
-                <div class="field half">
+                <div class="field">
                   <label for="emergency_contact">緊急聯絡人/關係/電話</label>
                   <input name="emergency_contact" id="emergency_contact" type="text" required>
                 </div>
