--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -35,9 +35,9 @@
                 </header>
                 <ul>
                   <li>報名時間：<strike>5/27（六）— &nbsp;6/22（四）</strike>
-                    <ol>
+                    <ul>
                       <li>改為 7/6（四）截止喔！</li>
-                    </ol>
+                    </ul>
                   </li>
                   <li>名單公佈：6/23（五）</li>
                   <li>正取繳費：6/24（六）— &nbsp;6/30（五）</li>
@@ -119,7 +119,7 @@
                     </select>
                   </div>
                   <div class="field half">
-                    <label for="clothe_size" id="cloth_size">訓服尺寸</label>
+                    <label for="clothe_size" id="cloth_size"><a href="/assets/images/size_chart.png" data-fancybox="images">訓服尺寸</a></label>
                     <select name="clothe_size" id="clothe_size">
                       <option value="S" style="color:black;">S</option>
                       <option value="M" style="color:black;">M</option>
@@ -197,6 +197,9 @@
     <script src="assets/js/sweetalert2.min.js"></script>
     <link rel="stylesheet" href="assets/css/sweetalert2.min.css" />
     <link rel="stylesheet" href="assets/css/datepicker.css" />
+			<script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
+			<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
+         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script>
     <script src="assets/js/datepicker.js"></script>
     <script src="assets/js/datepicker-CN.js"></script>
     <script>
