Updates on Q&A page and guides
Further refinements and improvements are expected.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,8 +65,8 @@
 							<img src="assets/images/pic05.jpg" alt="">
 						</span>
 						<header class="major">
-							<h3><span>Q &amp; A</span></h3>
-							<p>（敬請期待）</p>
+							<h3><a href="/qna" class="link">Q &amp; A</a></h3>
+							<p>最新的 Q &amp; A！</p>
 						</header>
 					</article>
 					<article style="background-image: url(&quot;assets/images/2015/old1.jpg&quot;);">
