replace ambiguous instruction with direction to email notifications

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -79,7 +79,7 @@
                       <li>請<strong>務必</strong>於報名時填寫「團報名單」欄位告知我們！</li>
                     </ul>
                   </li>
-                  <li>匯款帳戶：025501223801</li>
+                  <li>匯款流程請參考我們寄出的<strong>錄取通知</strong>和<strong>匯款通知</strong>！</li>
                 </ul>
               </div>
             </div>
