--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -39,10 +39,9 @@
                       <li>改為 7/6（四）截止喔！</li>
                     </ul>
                   </li>
-                  <li>名單公佈：6/23（五）</li>
+                  <li>第一階段名單公佈：6/23（五）</li>
                   <li>正取繳費：6/24（六）— &nbsp;6/30（五）</li>
-                  <li>備取通知：7/01（六）</li>
-                  <li>備取繳費：7/02（日）— &nbsp;7/08（六）</li>
+                  <li>第二階段名單公佈：7/7（五）</li>
                   <li>營隊活動：7/25（二）— &nbsp;7/31（一）<br>
                     每日活動以 8:00 AM - 5:00 PM 為主，供應午餐，<br>
                     （活動日程表請參見<a href="/schedule">課程資訊</a>，保留異動空間）</li>
