--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -40,7 +40,6 @@
                     </ul>
                   </li>
                   <li>第一階段名單公佈：6/23（五）</li>
-                  <li>正取繳費：6/24（六）— &nbsp;6/30（五）</li>
                   <li>第二階段名單公佈：7/7（五）</li>
                   <li>營隊活動：7/25（二）— &nbsp;7/31（一）<br>
                     每日活動以 8:00 AM - 5:00 PM 為主，供應午餐，<br>
@@ -63,7 +62,8 @@
                 <ol>
                   <li>列印<a href="/assets/parental_consent.docx">家長同意書</a>，簽名後拍照/掃描</li>
                   <li>線上填寫報名表單，上傳檔案</li>
-                  <li>等待 6/23 公佈名單、寄發錄取通知</li>
+                  <li>第一階段名單公佈：6/23（五）</li>
+                  <li>第二階段名單公佈：7/7（五）</li>
                   <li>依照公告指示完成繳費</li>
                   <li>公佈已繳費名單，確認完成報名流程</li>
                 </ol>
