--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,6 +21,6 @@
    </li></ul>
    <ul class="actions vertical">
       <li></li>
-      <li><a href="/guide#three" class="button fit">立刻報名！</a></li>
+      <li><a href="/guide#three" class="button fit">報名截止！</a></li>
    </ul>
 </div><a class="close" href="#menu">Close</a></nav>
