--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -102,8 +102,8 @@
         <!-- Three -->
         <section id="three">
           <div class="inner">
-            <span href="" class="button big" id="reg_button">立刻報名！</span>
-            <section id="reg_form" style="display: none;">
+            <span href="" class="button big" id="reg_button">報名截止！</span>
+            <section id="reg_form_disabled" style="display: none;">
               <form method="post" action="#">
                 <div class="field half first">
                   <label for="full_name">學員姓名</label>
